crates/resources/tests/snapshots/managed_resource_commands__managed_resource_commands_keep_installed_state_when_update_validation_fails.snap
---
source: crates/resources/tests/managed_resource_commands.rs
expression: "(install_summary(&installed, tempdir.path())?, failed_update,\ntrack_records_summary(&listed_after_failure, tempdir.path())?,)"
---
(
    InstallSnapshot {
        resource_name: "redis",
        track: "7.2",
        artifact_version: "7.2.5-pv1",
        current_artifact_path: "home/.pv/resources/redis/7.2/releases/7.2.5-pv1",
        revoked_latest: None,
        downloaded_from_cache: false,
    },
    Err(
        Resources(
            InvalidArtifactLayout {
                resource: "redis",
                reason: "missing required path `bin/pv-fake-resource`",
            },
        ),
    ),
    [
        TrackRecordSnapshot {
            resource_name: "redis",
            track: "7.2",
            installed_version: "7.2.5-pv1",
            current_artifact_path: "home/.pv/resources/redis/7.2/releases/7.2.5-pv1",
            usage_count: 0,
        },
    ],
)
