crates/resources/tests/snapshots/managed_resource_commands__managed_resource_commands_uninstall_php_pair_records_both_removal_intents.snap
---
source: crates/resources/tests/managed_resource_commands.rs
expression: "(removal_intent_summary(intent.php()),\nremoval_intent_summary(intent.frankenphp()), state_after_uninstall,)"
---
(
    RemovalIntentSnapshot {
        resource_name: "php",
        track: "8.4",
        prune: true,
        force: true,
    },
    RemovalIntentSnapshot {
        resource_name: "frankenphp",
        track: "8.4",
        prune: true,
        force: true,
    },
    [
        RawTrackRecordSnapshot {
            resource_name: "frankenphp",
            track: "8.4",
            desired_state: "Removed",
            installed_version: Some(
                "8.4.8-pv1",
            ),
            current_artifact_path: Some(
                "home/.pv/resources/frankenphp/8.4/releases/8.4.8-pv1",
            ),
            usage_count: 0,
            removal_prune: true,
            removal_force: true,
        },
        RawTrackRecordSnapshot {
            resource_name: "php",
            track: "8.4",
            desired_state: "Removed",
            installed_version: Some(
                "8.4.8-pv1",
            ),
            current_artifact_path: Some(
                "home/.pv/resources/php/8.4/releases/8.4.8-pv1",
            ),
            usage_count: 0,
            removal_prune: true,
            removal_force: true,
        },
    ],
)
