crates/resources/tests/snapshots/managed_resource_commands__managed_resource_commands_uninstall_records_prune_and_force_intent.snap
---
source: crates/resources/tests/managed_resource_commands.rs
expression: "(removal_intent_summary(&intent), removal_prune, removal_force)"
---
(
    RemovalIntentSnapshot {
        resource_name: "redis",
        track: "7.2",
        prune: true,
        force: true,
    },
    1,
    1,
)
