crates/resources/tests/snapshots/managed_resource_commands__managed_resource_commands_uninstall_rejects_in_use_tracks_without_force.snap
---
source: crates/resources/tests/managed_resource_commands.rs
expression: "(rejected, removal_intent_summary(&forced))"
---
(
    Err(
        TrackInUse {
            resource: "redis",
            track: "7.2",
            usage_count: 2,
        },
    ),
    RemovalIntentSnapshot {
        resource_name: "redis",
        track: "7.2",
        prune: false,
        force: true,
    },
)
