crates/resources/tests/snapshots/managed_resource_commands__managed_resource_commands_uninstall_rejects_latest_alias_as_concrete_track.snap
---
source: crates/resources/tests/managed_resource_commands.rs
expression: result
---
Err(
    Resources(
        ReservedTrackName {
            name: "latest",
        },
    ),
)
