crates/resources/tests/snapshots/managed_resource_commands__managed_resource_commands_uninstall_rejects_tracks_that_are_not_installed.snap
---
source: crates/resources/tests/managed_resource_commands.rs
expression: result
---
Err(
    TrackNotInstalled {
        resource: "redis",
        track: "7.2",
    },
)
